# ares

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
docs/plans/: 2026-02-23-categorization-and-analysis-design.md  2026-02-23-categorization-and-analysis.md
docs/superpowers/plans/: 2026-03-22-yaml-config.md  2026-06-20-ai-spending-advisor.md
docs/superpowers/specs/: 2026-03-22-yaml-config-design.md  2026-06-20-ai-spending-advisor-design.md
src/: main.cpp
src/application/services/: AccountService.cpp  AccountService.hpp  AdvisorService.cpp  AdvisorService.hpp  BackupService.cpp  BackupService.hpp  BudgetService.cpp  BudgetService.hpp  CategoryMatcher.cpp  CategoryMatcher.hpp  ConfigService.cpp  ConfigService.hpp  CreditService.cpp  CreditService.hpp  DuplicateDetector.cpp  DuplicateDetector.hpp  ExportService.cpp  ExportService.hpp  ImportService.cpp  ImportService.hpp  RecurrenceDetector.cpp  RecurrenceDetector.hpp  ReportService.cpp  ReportService.hpp  TransactionService.cpp  TransactionService.hpp
src/core/account/: Account.cpp  Account.hpp
src/core/common/: Error.cpp  Error.hpp  Money.cpp  Money.hpp  Types.hpp
src/core/credit/: Credit.cpp  Credit.hpp
src/core/transaction/: Adjustment.cpp  Adjustment.hpp  RecurringPattern.cpp  RecurringPattern.hpp  Transaction.cpp  Transaction.hpp
src/infrastructure/ai/: ClaudeClient.cpp  ClaudeClient.hpp  CurlHttpTransport.cpp  CurlHttpTransport.hpp  HttpTransport.hpp
src/infrastructure/config/: ConfigParser.cpp  ConfigParser.hpp  ConfigUtils.cpp  ConfigUtils.hpp  ConfigWriter.cpp  ConfigWriter.hpp  YamlConfigParser.cpp  YamlConfigParser.hpp
src/infrastructure/import/: CsvParser.cpp  CsvParser.hpp  GenericCsvImporter.cpp  GenericCsvImporter.hpp  IngCsvImporter.cpp  IngCsvImporter.hpp  IngDeCsvImporter.cpp  IngDeCsvImporter.hpp
src/infrastructure/persistence/: AccountRepository.cpp  CreditRepository.cpp  DatabaseConnection.cpp  DatabaseConnection.hpp  MigrationRunner.cpp  MigrationRunner.hpp  SqliteAccountRepository.cpp  SqliteAccountRepository.hpp  SqliteAdjustmentRepository.cpp  SqliteAdjustmentRepository.hpp  SqliteCreditRepository.cpp  SqliteCreditRepository.hpp  SqliteRecurringPatternRepository.cpp  SqliteRecurringPatternRepository.hpp  SqliteTransactionRepository.cpp  SqliteTransactionRepository.hpp  TransactionRepository.cpp
src/presentation/cli/: ApiKey.hpp  CliApp.cpp  CliApp.hpp
tests/unit/application/: AdvisorServiceTests.cpp  ApiKeyTests.cpp
tests/unit/core/: AccountTests.cpp  AiErrorTests.cpp  MoneyTests.cpp  TransactionTests.cpp
tests/unit/infrastructure/: ClaudeClientTests.cpp  ConfigAiModelTests.cpp  ConfigMigrationTests.cpp  ConfigParserTests.cpp  ConfigUtilsTests.cpp  ConfigWriterTests.cpp  CurlHttpTransportTests.cpp  FakeHttpTransport.hpp  FakeHttpTransportTests.cpp  GenericCsvImporterTests.cpp  IngDeCsvImporterTests.cpp  JsonDepTests.cpp  MigrationRunnerTests.cpp  YamlConfigParserTests.cpp
tests/unit/services/: AccountServiceTests.cpp  BackupServiceTests.cpp  BudgetServiceTests.cpp  CategoryMatcherTests.cpp  CreditServiceTests.cpp  DuplicateDetectorTests.cpp  ExportServiceTests.cpp  ImportServiceTests.cpp  RecurrenceDetectorTests.cpp  ReportServiceTests.cpp  TransactionServiceTests.cpp
